Bug 374990 - New Network KCM Crash on Cancel
Summary: New Network KCM Crash on Cancel
Status: RESOLVED FIXED
Alias: None
Product: plasma-nm
Classification: Unmaintained
Component: kcm (other bugs)
Version First Reported In: 5.8.95
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords: drkonqi
: 375210 375897 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-13 08:40 UTC by Bastian Köcher
Modified: 2017-02-08 05:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bastian Köcher 2017-01-13 08:40:59 UTC
Application: kcmshell5 (5.8.95)

Qt Version: 5.8.0
Frameworks Version: 5.29.0
Operating System: Linux 4.9.3-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:
I opened the new network kcm and hit the cancel button without any modifications. After pressing the cancel button, the applications crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings Module (kcmshell5), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f0296cc6580 (LWP 1920))]

Thread 3 (Thread 0x7f027ad81700 (LWP 1922)):
#0  0x00007f02966d048d in poll () from /usr/lib/libc.so.6
#1  0x00007f028e8df786 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f028e8df89c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f0293db021b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f0293d59aaa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f0293b7b9f3 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f029575c0c5 in ?? () from /usr/lib/libQt5DBus.so.5
#7  0x00007f0293b80658 in ?? () from /usr/lib/libQt5Core.so.5
#8  0x00007f0290afb454 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f02966d97df in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f028318a700 (LWP 1921)):
#0  0x00007f02966d048d in poll () from /usr/lib/libc.so.6
#1  0x00007f0290f208e0 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f0290f22679 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f02856ee239 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#4  0x00007f0293b80658 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f0290afb454 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f02966d97df in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f0296cc6580 (LWP 1920)):
[KCrash Handler]
#6  0x0000000002b87a90 in ?? ()
#7  0x00007f0294a79e95 in QWidget::destroy(bool, bool) () from /usr/lib/libQt5Widgets.so.5
#8  0x00007f0294a3deb0 in QApplication::~QApplication() () from /usr/lib/libQt5Widgets.so.5
#9  0x00007f0296997025 in kdemain () from /usr/lib/libkdeinit5_kcmshell5.so
#10 0x00007f0296611291 in __libc_start_main () from /usr/lib/libc.so.6
#11 0x000000000040066a in _start ()

Reported using DrKonqi
Comment 1 Jan Grulich 2017-01-16 06:03:16 UTC
We are aware of this crash, unfortunately we were not able to identify the cause yet. I'll keep you informed once we solve it.
Comment 2 David Edmundson 2017-01-19 14:58:02 UTC
Git commit 8e7540a0e00beaa9689593bd91898ce306730fd6 by David Edmundson.
Committed on 19/01/2017 at 14:57.
Pushed by davidedmundson into branch 'Plasma/5.9'.

Delete KCModule before deleting QApplication

Summary:
Currently the dialog just leaks. As a top level window it should get
cleaned up by the QApplication destructor.

This fixes a bug where a QMenu in QML (a top level window with no
parent) gets deleted by both QApplication and the KCM closing the
QQuickView which then deletes every QML Element including the menu.

Test Plan:
KCM's still load, everything looks the same
Jan confirmed it fixed the network KCM crash.

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4197

M  +1    -0    kcmshell/main.cpp

https://commits.kde.org/kde-cli-tools/8e7540a0e00beaa9689593bd91898ce306730fd6
Comment 3 Christoph Feck 2017-01-31 23:25:51 UTC
*** Bug 375210 has been marked as a duplicate of this bug. ***
Comment 4 Jan Grulich 2017-02-08 05:59:26 UTC
*** Bug 375897 has been marked as a duplicate of this bug. ***